2001-01-09  Tim Jenness  <timj@jach.hawaii.edu>

	* Inst/Defn.pm (orac_determine_recipe_search_path): Add search
	path information for primitives and recipes

	* Basic.pm: Move guts to ORAC::Recipe 

	* Recipe.pm: Create. Complete reworking of ORAC::Basic recipe handling

	* General.pm (log10): Fix -w warning by not importing POSIX::log10

	* Display/KAPVIEW.pm (select_section): Fix = in conditional

	* Core.pm (orac_process_frame): Use ORAC::Recipe

2001-01-08  Tim Jenness  <timj@jach.hawaii.edu>

	* Inst/SCUBA.pm: Now inherits from Inst::ADAM

	* Inst/CGS4.pm: Now inherits from Inst::ADAM

	* Inst/IRCAM.pm: Now inherits from Inst::ADAM

	* Inst/Defn.pm: Create generic instrumentation config file 

	* Inst/ADAM.pm: Create base class for ADAM messaging startup

	* Inst/InitMsg.pm: Create base class for messaging startup

	* Basic.pm (orac_exit_normally): rmtree ADAM_USER only if it exists

2000-10-31  Tim Jenness  <timj@jach.hawaii.edu>

	* Display/GAIA.pm (image): Check the return value of cwd

2000-10-20  Tim Jenness  <timj@jach.hawaii.edu>

	* Frame/JCMT.pm (findgroup): Make sure that a DRGROUP/DRECIPES of
	all spaces works okay. 

2000-10-17  Tim Jenness  <timj@jach.hawaii.edu>

	* Calib/SCUBA.pm (fluxes_mon): Make use of JPL_DIR and FLUXES_DIR
	that are now set by Starlink.

2000-10-11  Tim Jenness  <timj@jach.hawaii.edu>

	* Calib/SCUBA.pm (tau): Try to fix problem of using 850N for
	scaling to 450N, not just 450W. A bit of a sledge hammer approach.
	May need to revisit with cleverer approach using the rules file
	rather than searching the index file twice.

2000-10-10  Tim Jenness  <timj@jach.hawaii.edu>

	* Display/KAPVIEW.pm: Use Starlink::Versions. Fix vecplot and
	histogram for kappa 0.14 and 0.15-5 respectively.

2000-10-09  Tim Jenness  <timj@jach.hawaii.edu>

	* Basic.pm: Remove documentation for $KAPPA_* variables 

2000-08-24  Tim Jenness  <timj@jach.hawaii.edu>

	* General.pm: Fix max() and min() with 0
